<resources>
    <string name="app_name">Quiz</string>
    <string name="main_text">Solve the quiz</string>
    <string name="submit">Submit</string>
    <string name="enable_submit">Enable Submit</string>
    <string name="clear">Clear</string>
    <string name="enable_clear">Enable Clear</string>

    <string name="first_question">Solve the quiz</string>
    <string name="q1_a1">Solve the quiz</string>
    <string name="q1_a2">Solve the quiz</string>
    <string name="q1_a3">Solve the quiz</string>

    <string name="second_question">Solve the quiz</string>
    <string name="q2_a1">Solve the quiz</string>
    <string name="q2_a2">Solve the quiz</string>
    <string name="q2_a3">Solve the quiz</string>

    <string name="third_question">Solve the quiz</string>
    <string name="q3_a1">Solve the quiz</string>
    <string name="q3_a2">Solve the quiz</string>
    <string name="q3_a3">Solve the quiz</string>

    <string name="fourth_question">Solve the quiz</string>
    <string name="q4_a1">Solve the quiz</string>
    <string name="q4_a2">Solve the quiz</string>
    <string name="q4_a3">Solve the quiz</string>
</resources>