<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.051"
            android:id="@+id/mainText" android:layout_marginTop="37dp" android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollView" android:textSize="24sp" android:textStyle="bold"/>
    <ScrollView
            android:layout_width="381dp"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainText" android:layout_marginBottom="88dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:text="@string/first_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q1"/>
            <CheckBox
                    android:text="@string/q1_a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q1_a1"/>
            <CheckBox
                    android:text="@string/q1_a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q1_a2"/>
            <CheckBox
                    android:text="@string/q1_a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q1_a3"/>

            <TextView
                    android:text="@string/first_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q2"/>
            <CheckBox
                    android:text="@string/q1_a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q2_a1"/>
            <CheckBox
                    android:text="@string/q1_a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q2_a2"/>
            <CheckBox
                    android:text="@string/q1_a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q2_a3"/>

            <TextView
                    android:text="@string/third_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q3"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <RadioButton
                        android:text="@string/q3_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/q3_a1"/>
                <RadioButton
                        android:text="@string/q3_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/q3_a2"/>
                <RadioButton
                        android:text="@string/q3_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/q3_a3"/>
            </RadioGroup>

            <TextView
                    android:text="@string/fourth_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/q4"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <RadioButton
                        android:text="@string/q4_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/q4_a1"/>
                <RadioButton
                        android:text="@string/q4_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/q4_a2"/>
                <RadioButton
                        android:text="@string/q4_a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/q4_a3"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            android:layout_marginEnd="76dp" android:layout_marginRight="76dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>